--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,7 +77,13 @@ body {
   background-color: var(--body-color);
   color: var(--text-color);
 }
-
+#preloader{
+  background: #2A80B9 url('../img/load.gif') no-repeat center center;
+  height: 100vh;
+  width: 100%;
+  z-index: 100000;
+  position: fixed;
+}
 h1,
 h2,
 h3 {
@@ -792,4 +798,14 @@ body.light-theme{
 .light-theme .services__card,
 .light-theme .contact__card{
   box-shadow: 0 2px 16px hsla(var(--second-hue),48%,8%, .1);
+}
+
+@media (max-width: 768px){
+  #preloader{
+    background: #2A80B9 url('../img/load.gif') no-repeat center center;
+    height: 100vh;
+    width: 100%;
+    z-index: 100000;
+    position: fixed;
+  }
 }
